Trying to fix build on travis